fixed nav bar and logo to be aligned properly

--- a/css/index.css
+++ b/css/index.css
@@ -144,12 +144,12 @@ h5 {
   letter-spacing: 1px;
 }
 
-h1{
-  font-size:55px;
+h1 {
+  font-size: 55px;
 }
 
-h3{
-  font-size:15px;
+h3 {
+  font-size: 15px;
 }
 
 .title {
@@ -159,6 +159,7 @@ h3{
 
 .navigation {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   color: purple;
   font-size: 15px;
@@ -166,9 +167,9 @@ h3{
 }
 
 .container hr {
-  border:1px solid black;
-  width:100%;
-  margin-bottom:40px;
+  border: 1px solid black;
+  width: 100%;
+  margin-bottom: 40px;
 }
 
 h1,
@@ -176,46 +177,48 @@ br .heading {
   text-align: center;
 }
 
-.container{
+.container {
   position: absolute;
   margin: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  width:800px;
-  display:flex;
-  flex-direction:column;
+  width: 800px;
+  display: flex;
+  flex-direction: column;
 }
 
-.services, .product, .vision, .features, .about, .contact {
-  margin-top:auto;
+.services,
+.product,
+.vision,
+.features,
+.about,
+.contact {
+  margin-top: auto;
 }
 
-header{
-  display:flex;
-  flex-direction:row;
-  justify-content:center;
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  margin-top:40px;
-  margin-bottom:40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .header_img {
-  margin-left:30px;
+  margin-left: 30px;
 }
 
 .header_img img {
-  width:300px;
+  width: 300px;
 }
-
-
-
 
 .word_button {
   display: flex;
   flex-direction: column;
-  margin-right:30px;
+  margin-right: 30px;
 }
 
 .innov8 {
@@ -227,11 +230,12 @@ header{
   border: 1px solid black;
   font-size: 20px;
   line-height: 25px;
+  margin-top: 10px;
 }
 
-.content-container{
+.content-container {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
 }
 
 .top-content {
@@ -240,11 +244,9 @@ header{
   justify-content: space-between;
 }
 
-.first_set{
+.first_set {
   margin-right: 10px;
 }
-
-
 
 .middle-img {
   margin-bottom: 20px;
@@ -255,7 +257,7 @@ header{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom:30px;
+  margin-bottom: 30px;
 }
 
 .service_word {
@@ -264,14 +266,14 @@ header{
   justify-content: space-between;
 }
 
-.contact {
+/*.contact {
   display: flex;
   flex-direction: column;
-}
+}*/
 
 /* Service page below*/
 
-.nav_2 {
+/*.nav_2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -292,20 +294,18 @@ h2 .toppy {
   display: flex;
   flex-direction: column;
   /*font-size:50px;*/
+
+body {
+  max-width: 800px;
 }
 
-
-body{
-    max-width:800px
+.contact_info {
+  margin-bottom: 20px;
 }
 
-.contact_info{
-  margin-bottom:20px;
-}
-
-footer{
-  text-align:center;
-  margin-bottom:20px;
+footer {
+  text-align: center;
+  margin-bottom: 20px;
 }
 /*
 .first_pair {
@@ -486,67 +486,94 @@ hr {
 /*media queries*/
 
 @media (max-width: 800px) {
-  .header_img img{
-    display:none;
+  .header_img img {
+    display: none;
   }
   .container {
-    padding:50px;
+    padding: 50px;
   }
 }
 
 @media (max-width: 500px) {
-    .navigation{
-        order: 0;
-        display:flex;
-        flex-direction:row-reverse;
-
-    }
-
-    .first_set{
-      margin-bottom:10px;
-    }
-
-    .top-content {
-      display:flex;
-      flex-direction:column;
-      flex-wrap:wrap;
-    }
-
-    .bottom-content {
-      display:flex;
-      flex-direction:column;
-      flex-wrap:wrap;
-    }
-
-    .third_set{
-      margin-bottom:10px;
-    }
-  
-
-    .fourth_set{
-      margin-bottom:10px
-    }
-  
-    .code_img {
-    display: none;
-       
-  }
-
-  .logo {
-      order:1;
-      display:flex;
-      flex-direction:row-reverse;
+  .navigation {
+    /*order: 1;*/
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    line-height: 1.5;
+    text-align: center;
     
   }
-  body{
-    height:150vh;
-    justify-content:space-around;
-  }
-  .word_button {
-    order: 1
-    width:50%;
-  }
-  
-  
 
+  .services{
+   
+    background-color:rgb(250, 250, 250, 0.8);
+  }
 
+  .product{
+    
+    background-color:rgb(250, 250, 250, 0.8);
+  }
+
+  .vision{
+    
+    background-color:rgb(250, 250, 250, 0.8);
+  }
+
+  .features{
+    
+    background-color:rgb(250, 250, 250, 0.8);
+  }
+
+  .about hr{
+    
+    background-color:rgb(250, 250, 250, 0.8);
+  }
+
+  .contact hr{
+    
+    background-color:rgb(250, 250, 250, 0.8);
+  }
+  /*.logo{
+    font-size: 30px;
+  }*/
+
+  .first_set {
+    margin-bottom: 10px;
+  }
+
+  .top-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .bottom-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .third_set {
+    margin-bottom: 10px;
+  }
+
+  .fourth_set {
+    margin-bottom: 10px;
+  }
+
+  .code_img {
+    display: none;
+  }
+
+  /*.logo {
+      o
+}
+body {
+  height: 150vh;
+  justify-content: space-around;
+}
+.word_button {
+  /*order: 1
+  width: 50%;
+}*/
